# Email_Agent

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
config/: settings.py
docs/: phase0.md  phase4.md  phase5.md  phase6.md
scripts/: _discover_draft_tool.py  connect_account.py  discover_send_tool.py  discover_trigger.py  setup_gmail_trigger.py  smoke_composio.py  smoke_nim.py  smoke_slack.py
src/email_agent/core/: agent.py  loop.py  models.py
src/email_agent/interfaces/: approval_handlers.py  blocks.py  cli.py  slack_app.py
src/email_agent/llm/: nim_client.py
src/email_agent/queue/: schema.sql  store.py
src/email_agent/safety/: guards.py  injection.py
src/email_agent/tools/: calendar.py  composio_bridge.py  gmail.py  registry.py
src/email_agent/triggers/: gmail_watch.py
tests/: fakes.py
tests/core/: test_agent.py  test_loop.py
tests/interfaces/: test_slack_actions.py
tests/llm/: test_nim_client.py
tests/queue/: test_store.py
tests/safety/: test_guards.py  test_injection.py
tests/tools/: test_calendar.py  test_gmail.py
tests/triggers/: test_gmail_watch.py
