[project]
name = "email-agent"
version = "0.1.0"
description = "Personal email agent on Gmail + Google Calendar, controlled via Slack"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.50",
    "composio>=0.8",
    "slack-bolt>=1.20",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_agent"]
